Initial start screen

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Re:nässans</title>
+    <title>Anton Ranestam</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -16,5 +16,53 @@
 		<link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/bb8a644b-f3d7-4375-96f3-08ac3112eff2.css"/>
 	</head>
 	<body>
+
+		<header class="top-bar">
+			<button class="menu menu--closed">Menu</button>
+
+			<span class="social-media">
+				<a href="#" class="twitter-sm">Twitter</a>
+				<a href="#" class="dribbble-sm">Dribbble</a>
+			</span>
+		</header>
+
+		<!-- Start section -->
+		<section class="start">
+
+			<div class="start__text">
+				<h1>
+					<div class="start__text__cut">
+						<ul>
+							<li>Anton</li>
+							<li> Ranestam</li>
+							<li>INFP-T </li>
+							<li>Designer</li>
+							<li>Creative </li>
+							<li>Coder</li>
+							<li> Maker</li>
+							<li>Snusare </li>
+						</ul>
+					</div>
+				</h1>
+				<em class="start__text__vis"></em>
+			</div>
+
+			<div class="start__overlay"></div>
+			<iframe class="start__bg" src="https://player.vimeo.com/video/189716952?autoplay=1&loop=1&color=ffffff&title=0&byline=0&portrait=0" width="1920" height="1080" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+			<!-- <audio id="song" autoplay>
+			  <source src="/music/aphextwin3.mp3" type="audio/mpeg">
+			</audio> -->
+
+			<button class="mute-btn"></button>
+		</section>
+
+		<!-- Cases section -->
+		<section class="cases">
+			<article class="case">
+			</article>
+		</section>
+
+		<button class="scroll scroll--down"></button>
 	</body>
 	</html>
