--- a/index.html
+++ b/index.html
@@ -9,52 +9,160 @@
 		<script src="assets/shuffle/jquery.shuffleLetters.js"></script>
 		<script src="assets/modernizr/modernizr.js"></script>
 		<script src="assets/greensock-js/src/minified/TweenMax.min.js"></script>
+		<script src="/assets/parallax/jquery.parallax.min.js"></script>
     <link rel="stylesheet" href="dist/css/main.css">
     <script src="dist/js/bundle.js"></script>
 		<link rel="shortcut icon" sizes="32x32" type="image/x-icon" href="/graphics/favicon.ico">
 
 		<link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/bb8a644b-f3d7-4375-96f3-08ac3112eff2.css"/>
 	</head>
+
 	<body>
 
 		<header class="top-bar">
-			<button class="menu menu--closed">Menu</button>
+			<button class="menu-btn menu-btn--closed">Me<br />nu</button>
 
 			<span class="social-media">
-				<a href="#" class="twitter-sm">Twitter</a>
-				<a href="#" class="dribbble-sm">Dribbble</a>
+				<a href="#" class="twitter-sm">
+					<svg width="30px" height="30px" viewBox="0 0 30 30" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+					    <defs></defs>
+					    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+					        <g id="start-1" transform="translate(-1318.000000, -78.000000)" fill="#FFFFFF">
+					            <g id="dribble" transform="translate(1318.000000, 78.000000)">
+					                <g id="dribbble-logo">
+					                    <g id="Capa_1">
+					                        <path d="M27.9589749,7.46261959 C26.6190205,5.16703872 24.8014579,3.34947608 22.5058087,2.00958998 C20.2097494,0.66977221 17.7032802,0 14.9844875,0 C12.2659681,0 9.75874715,0.66977221 7.46309795,2.00958998 C5.16731207,3.34927107 3.34974943,5.16683371 2.00979499,7.46261959 C0.66977221,9.75854214 0,12.2657631 0,14.9840774 C0,17.7025285 0.669977221,20.2093394 2.00958998,22.5053986 C3.34947608,24.8009795 5.16703872,26.6185421 7.4628246,27.9585649 C9.75874715,29.2983144 12.2657631,29.9681549 14.9842141,29.9681549 C17.7026651,29.9681549 20.2099544,29.2983144 22.5057403,27.9585649 C24.8013895,26.6190205 26.6188838,24.8009795 27.9587016,22.5053986 C29.2983144,20.2095444 29.9680182,17.7023918 29.9680182,14.9840774 C29.9680866,12.2654897 29.2983144,9.75820046 27.9589749,7.46261959 L27.9589749,7.46261959 Z M14.9842825,2.1852164 C18.2098633,2.1852164 21.0259681,3.25175399 23.4321868,5.38476082 L23.1882916,5.72596811 C23.0907745,5.86277904 22.8468793,6.12587699 22.4568109,6.51628702 C22.0666743,6.90635535 21.6406606,7.27728929 21.1789749,7.62840547 C20.7168793,7.97965831 20.0896811,8.3795672 19.2959453,8.82833713 C18.5024829,9.27710706 17.6570843,9.67079727 16.7594761,10.0089294 C15.2637813,7.25118451 13.6640774,4.76685649 11.9600911,2.55580866 C12.9878132,2.30870159 13.9957859,2.1852164 14.9842825,2.1852164 L14.9842825,2.1852164 Z M4.956082,7.0428246 C6.2046697,5.46929385 7.72626424,4.2594533 9.5214123,3.41412301 C11.1342369,5.56025057 12.7209567,8.01874715 14.2819134,10.7891344 C10.3277904,11.8297039 6.38678815,12.3500228 2.45863326,12.3498178 C2.87507973,10.385877 3.70749431,8.61669704 4.956082,7.0428246 L4.956082,7.0428246 Z M3.04373576,19.5986788 C2.47134396,18.1354442 2.1852164,16.5971071 2.1852164,14.9840774 C2.1852164,14.8018907 2.19191344,14.6652847 2.20476082,14.574328 C6.91353075,14.574328 11.2905239,13.9696811 15.335672,12.7597722 C15.7519818,13.5661503 16.0966743,14.2880638 16.3698178,14.9255809 C16.3171298,14.951549 16.2332118,14.9806606 16.116082,15.0132574 C15.9986105,15.0457859 15.9142825,15.0683371 15.8617995,15.0815262 L15.1400911,15.3351253 C14.6456036,15.5173121 13.9983144,15.8295444 13.1987016,16.271549 C12.3988838,16.7142369 11.550205,17.2407062 10.6526651,17.8521868 C9.75512528,18.4637358 8.82833713,19.2733941 7.87243736,20.2817768 C6.91640091,21.2897494 6.11323462,22.3722779 5.46287016,23.5298405 C4.42230068,22.3722779 3.61599089,21.0615034 3.04373576,19.5986788 L3.04373576,19.5986788 Z M14.9842825,27.7831435 C11.9405467,27.7831435 9.22209567,26.8074943 6.82872437,24.8566059 L7.1214123,25.0713212 C7.57660592,24.0694989 8.24637813,23.1069021 9.13107062,22.1835991 C10.0156264,21.2602961 10.8675171,20.5152847 11.6869476,19.9493166 C12.5063781,19.3838952 13.3972893,18.8506606 14.3599544,18.3492711 C15.3224146,17.8488383 15.9789294,17.5298405 16.3304556,17.393713 C16.6817084,17.2571754 16.9614123,17.1496128 17.1694989,17.0714351 L17.2083144,17.0518223 L17.2476082,17.0518223 C18.5218907,20.3946014 19.4328246,23.6335763 19.9789066,26.7682688 C18.3660137,27.4449431 16.7013895,27.7829385 14.9842825,27.7831435 L14.9842825,27.7831435 Z M25.7546241,21.900615 C24.7920273,23.3900911 23.5886105,24.6227563 22.145262,25.5979271 C21.611549,22.6064009 20.7795444,19.5558998 19.6476082,16.4474487 C22.2360137,16.0437813 24.8958998,16.2327335 27.6274032,17.0128702 C27.341139,18.7818451 26.7167426,20.4114123 25.7546241,21.900615 L25.7546241,21.900615 Z M27.5881093,14.8085194 C27.4580638,14.7826879 27.2952847,14.7531663 27.1002506,14.7208428 C26.9052164,14.6885194 26.6676082,14.6492938 26.3879043,14.6037813 C26.1086105,14.5582688 25.7959681,14.5161048 25.451549,14.4770159 C25.1067882,14.4379954 24.7394077,14.4023235 24.348861,14.369795 C23.9587927,14.3371298 23.5424829,14.3113667 23.1004784,14.2916856 C22.6577221,14.2722779 22.2092255,14.2624374 21.7538952,14.2624374 C21.2990433,14.2624374 20.820615,14.2756264 20.3201139,14.3014579 C19.8194761,14.3270843 19.3351025,14.3731435 18.8669248,14.4380638 C18.827631,14.3729385 18.7789749,14.2655809 18.7204784,14.1159226 C18.6620501,13.9664692 18.6194077,13.8524829 18.5941913,13.7744419 C18.3467426,13.2281549 18.0604784,12.6102506 17.7349886,11.9210706 C18.6325285,11.5566287 19.4879727,11.1373121 20.3013895,10.6624374 C21.1140547,10.1875626 21.7639408,9.76510251 22.2520046,9.39444191 C22.7398633,9.0233713 23.201549,8.6298861 23.6371982,8.21378132 C24.0731207,7.7976082 24.3556264,7.50833713 24.4861503,7.34569476 C24.6164009,7.18277904 24.7398861,7.02355353 24.8568109,6.86767654 L24.8764237,6.84799544 C26.7753759,9.1632574 27.7448064,11.8295672 27.7833485,14.8474715 L27.5881093,14.8085194 L27.5881093,14.8085194 Z" id="Shape"></path>
+					                    </g>
+					                </g>
+					            </g>
+					        </g>
+					    </g>
+					</svg>
+				</a>
+				<a href="#" class="dribbble-sm">
+					<svg width="30px" height="25px" viewBox="0 0 30 25" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+					    <defs></defs>
+					    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+					        <g id="start-1" transform="translate(-1263.000000, -81.000000)" fill="#FFFFFF">
+					            <g id="twitter" transform="translate(1263.000000, 81.000000)">
+					                <g id="twitter-black-shape">
+					                    <g id="Capa_1">
+					                        <path d="M29.9970732,2.9040133 C28.8195565,3.4104878 27.6417738,3.72678492 26.4647894,3.85383592 C27.7941685,3.05620843 28.6933703,1.92937916 29.1618625,0.473414634 C27.9458315,1.19494457 26.6483149,1.68858093 25.2683814,1.9545898 C24.052816,0.663192905 22.5590687,0.0172283814 20.7861419,0.0172283814 C19.0897783,0.0172283814 17.6433925,0.615365854 16.4464523,1.81190687 C15.2501774,3.00838137 14.6519734,4.45476718 14.6519734,6.15126386 C14.6519734,6.60698448 14.7025277,7.07560976 14.8039024,7.55667406 C12.2969401,7.43008869 9.94523282,6.80022173 7.74838137,5.66707317 C5.55166297,4.53379157 3.68733925,3.02394678 2.1554102,1.1375388 C1.59831486,2.08689579 1.31966741,3.1189357 1.31966741,4.23305987 C1.31966741,5.28392461 1.56651885,6.25895787 2.06055432,7.15789357 C2.55425721,8.05669623 3.21911308,8.78461197 4.05478936,9.34177384 C3.067051,9.30372506 2.14283814,9.044102 1.28201774,8.56297118 L1.28201774,8.6389357 C1.28201774,10.1203769 1.74731707,11.42102 2.67778271,12.5418625 C3.60838137,13.6625721 4.78277162,14.3680044 6.20068736,14.659357 C5.66886918,14.7984479 5.13066519,14.8680931 4.58634146,14.8680931 C4.23179601,14.8680931 3.84558758,14.8364967 3.42784922,14.7736364 C3.82031042,16.0015078 4.54203991,17.0108647 5.59277162,17.8025721 C6.64370288,18.5938803 7.83385809,19.0017738 9.16330377,19.0277162 C6.93505543,20.7746341 4.39656319,21.6480931 1.54782705,21.6480931 C1.00330377,21.6480931 0.509667406,21.6232816 0.0664523282,21.5723282 C2.91525499,23.4079823 6.05514412,24.3258093 9.48631929,24.3258093 C11.6640133,24.3258093 13.7088027,23.9811752 15.6200222,23.2909756 C17.5321729,22.6012417 19.1652772,21.6767627 20.520133,20.518071 C21.8745898,19.3596452 23.0428603,18.0270732 24.0239468,16.5204878 C25.0050998,15.0137694 25.7360089,13.4407982 26.2175388,11.8012417 C26.6984701,10.1613525 26.9391353,8.5189357 26.9391353,6.87272727 C26.9391353,6.51818182 26.9327494,6.25243902 26.9200443,6.07509978 C28.1231707,5.20190687 29.1486918,4.14452328 29.9970732,2.9040133 L29.9970732,2.9040133 Z" id="Shape"></path>
+					                    </g>
+					                </g>
+					            </g>
+					        </g>
+					    </g>
+					</svg>
+				</a>
 			</span>
 		</header>
 
 		<!-- Start section -->
-		<section class="start">
+		<section>
+			<ul id="start" class="start">
 
-			<div class="start__text">
-				<h1>
-					<div class="start__text__cut">
-						<ul>
-							<li>Anton</li>
-							<li> Ranestam</li>
-							<li>INFP-T </li>
-							<li>Designer</li>
-							<li>Creative </li>
-							<li>Coder</li>
-							<li> Maker</li>
-							<li>Snusare </li>
-						</ul>
+				<li class="layer" data-depth="3.00">
+					<iframe class="start__bg" src="https://player.vimeo.com/video/189716952?autoplay=1&loop=1&color=ffffff&title=0&byline=0&portrait=0" width="1920" height="1080" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				</li>
+
+				<li class="layer" data-depth="-0.20">
+					<div class="start__text">
+						<h1>
+							<div class="start__text__cut">
+								<span class="last-text">Anton Ranestam</span>
+
+								<ul>
+									<li class="start__text__1"><span>A</span><span>n</span><span>t</span><span>o</span><span>n</span></li>
+									<li class="start__text__2"><span>R</span><span>a</span><span>n</span><span>e</span><span>s</span><span>t</span><span>a</span><span>m</span></li>
+									<li class="start__text__3"><span>I</span><span>N</span><span>F</span><span>P</span><span>-</span><span>T</span> </li>
+									<li class="start__text__4"><span>D</span><span>e</span><span>s</span><span>i</span><span>g</span><span>n</span><span>e</span><span>r</span></li>
+									<li class="start__text__5"><span>C</span><span>r</span><span>e</span><span>a</span><span>t</span><span>i</span><span>v</span><span>e</span> </li>
+									<li class="start__text__6"><span>C</span><span>o</span><span>d</span><span>e</span><span>r</span></li>
+									<li class="start__text__7"> <span>M</span><span>a</span><span>k</span><span>e</span><span>r</span></li>
+									<li class="start__text__8"><span>D</span><span>e</span><span>s</span><span>i</span><span>g</span><span>n</span><span>e</span><span>r</span> </li>
+								</ul>
+							</div>
+						</h1>
+
+						<span class="visualizer">
+							<span class="visualizer__wrapper">
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+							</span>
+						</span>
 					</div>
-				</h1>
-				<em class="start__text__vis"></em>
-			</div>
+				</li>
+			</ul>
 
-			<div class="start__overlay"></div>
-			<iframe class="start__bg" src="https://player.vimeo.com/video/189716952?autoplay=1&loop=1&color=ffffff&title=0&byline=0&portrait=0" width="1920" height="1080" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
-			<!-- <audio id="song" autoplay>
+			<audio id="song" autoplay loop>
 			  <source src="/music/aphextwin3.mp3" type="audio/mpeg">
-			</audio> -->
+			</audio>
 
-			<button class="mute-btn"></button>
+			<button class="big-btn">
+				<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+				<svg width="19px" height="10px" viewBox="0 0 19 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+						<defs></defs>
+						<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+								<g id="start-1" transform="translate(-702.000000, -1034.000000)" fill="#FFFFFF">
+										<g id="back" transform="translate(711.500000, 1038.500000) rotate(-90.000000) translate(-711.500000, -1038.500000) translate(706.000000, 1029.000000)">
+												<g id="Capa_1">
+														<path d="M1.31004932,9.49950228 L9.85654942,0.918792896 C10.0667418,0.707759208 10.0667418,0.369308954 9.85654942,0.158275266 C9.64635707,-0.052758422 9.30925614,-0.052758422 9.09906379,0.158275266 L0.171837935,9.12123435 C-0.0383544106,9.33226804 -0.0383544106,9.67071829 0.171837935,9.88175198 L9.09906379,18.8407293 C9.20217702,18.9442553 9.34098329,19 9.47582366,19 C9.61066403,19 9.7494703,18.948237 9.85258352,18.8407293 C10.0627759,18.6296956 10.0627759,18.2912454 9.85258352,18.0802117 L1.31004932,9.49950228 L1.31004932,9.49950228 Z" id="Shape"></path>
+												</g>
+										</g>
+								</g>
+						</g>
+				</svg>
+			</button>
+
+			<button class="mute-btn">
+				<svg width="30px" height="24px" viewBox="0 0 30 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+				    <defs></defs>
+				    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+				        <g id="start-1" transform="translate(-47.000000, -1014.000000)" fill="#FFFFFF">
+				            <g id="speaker" transform="translate(47.000000, 1014.000000)">
+				                <g id="Capa_1">
+				                    <g id="Group">
+				                        <path d="M14.202,0.879 C13.7145,0.603 13.1365,0.612 12.657,0.901 C12.634,0.9145 12.612,0.9305 12.592,0.9475 L5.817,6.679 L0.5,6.679 C0.2235,6.679 0,6.9025 0,7.179 L0,16.679 C0,16.812 0.0525,16.939 0.1465,17.0325 C0.2405,17.126 0.367,17.179 0.5,17.179 L5.805,17.1765 L12.5765,23.3965 C12.6015,23.4195 12.6285,23.4395 12.657,23.4565 C12.903,23.605 13.1755,23.6795 13.448,23.6795 C13.7065,23.679 13.9645,23.6125 14.202,23.4785 C14.7015,23.1965 15,22.6815 15,22.1005 L15,2.257 C15,1.6765 14.7015,1.1615 14.202,0.879 L14.202,0.879 Z M14,22.1005 C14,22.316 13.8915,22.5055 13.7105,22.608 C13.633,22.6515 13.4365,22.7355 13.2105,22.621 L6.5,16.4565 L6.5,14.1785 C6.5,13.902 6.2765,13.6785 6,13.6785 C5.7235,13.6785 5.5,13.902 5.5,14.1785 L5.5,16.1765 L1,16.1785 L1,7.6785 L5.5,7.6785 L5.5,9.6785 C5.5,9.955 5.7235,10.1785 6,10.1785 C6.2765,10.1785 6.5,9.955 6.5,9.6785 L6.5,7.4105 L13.2025,1.7405 C13.433,1.6195 13.633,1.7055 13.7105,1.7495 C13.8915,1.852 14,2.0415 14,2.257 L14,22.1005 L14,22.1005 Z" id="Shape"></path>
+				                        <path class="stroke" d="M26.013,11.929 C26.013,7.7555 23.355,4.049 19.3985,2.7055 C19.1375,2.617 18.853,2.757 18.764,3.0185 C18.6755,3.2795 18.8155,3.564 19.077,3.653 C22.6275,4.8585 25.013,8.1845 25.013,11.9295 C25.013,15.671 22.632,18.9975 19.0885,20.2065 C18.8275,20.2955 18.6875,20.5795 18.777,20.8415 C18.848,21.049 19.042,21.18 19.25,21.18 C19.3035,21.18 19.358,21.1715 19.4115,21.153 C23.3605,19.8055 26.013,16.099 26.013,11.929 L26.013,11.929 Z" id="Shape"></path>
+				                        <path class="stroke" d="M22.2265,0.187 C21.9725,0.0805 21.679,0.1975 21.5705,0.452 C21.463,0.7065 21.5815,1 21.836,1.108 C26.188,2.9545 29,7.2025 29,11.929 C29,16.8175 26.053,21.119 21.4925,22.886 C21.235,22.986 21.107,23.2755 21.207,23.533 C21.2835,23.731 21.473,23.8525 21.6735,23.8525 C21.7335,23.8525 21.7945,23.842 21.854,23.819 C26.8025,21.9005 30,17.2335 30,11.929 C30,6.8 26.9485,2.191 22.2265,0.187 L22.2265,0.187 Z" id="Shape"></path>
+				                        <path class="stroke" d="M21.513,11.929 C21.513,8.943 19.5085,6.278 16.6385,5.448 C16.3735,5.3725 16.0965,5.524 16.0195,5.79 C15.943,6.055 16.0955,6.3325 16.3615,6.409 C18.806,7.1155 20.5135,9.3855 20.5135,11.929 C20.5135,14.4725 18.806,16.7425 16.3615,17.449 C16.096,17.5255 15.943,17.803 16.0195,18.068 C16.083,18.287 16.2825,18.4295 16.5,18.4295 C16.546,18.4295 16.5925,18.423 16.6385,18.41 C19.509,17.5795 21.513,14.9145 21.513,11.929 L21.513,11.929 Z" id="Shape"></path>
+				                    </g>
+				                </g>
+				            </g>
+				        </g>
+				    </g>
+				</svg>
+			</button>
 		</section>
 
 		<!-- Cases section -->
