--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <title>Anton Ranestam</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-		<script src="assets/shuffle/jquery.shuffleLetters.js"></script>
-		<script src="assets/modernizr/modernizr.js"></script>
-		<script src="assets/greensock-js/src/minified/TweenMax.min.js"></script>
-		<script src="/assets/parallax/jquery.parallax.min.js"></script>
+		<link rel="icon" type="image/x-icon" href="/favicon.ico">
+
     <link rel="stylesheet" href="dist/css/main.css">
-    <script src="dist/js/bundle.js"></script>
 		<link rel="shortcut icon" sizes="32x32" type="image/x-icon" href="/graphics/favicon.ico">
 
 		<link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/bb8a644b-f3d7-4375-96f3-08ac3112eff2.css"/>
 	</head>
 
-	<body>
+	<body style="overflow: hidden;">
 
 		<header class="top-bar">
-			<button class="menu-btn menu-btn--closed">Me<br />nu</button>
+			<div class="menu-wrapper">
+
+				<button class="menu-btn menu-btn--closed"><span>Me</span><span>nu</span></button>
+
+			</div>
 
 			<span class="social-media">
 				<a href="#" class="twitter-sm">
@@ -58,8 +58,24 @@
 			</span>
 		</header>
 
+		<button class="big-btn">
+			<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+			<svg width="19px" height="10px" viewBox="0 0 19 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+					<defs></defs>
+					<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+							<g id="start-1" transform="translate(-702.000000, -1034.000000)" fill="#FFFFFF">
+									<g id="back" transform="translate(711.500000, 1038.500000) rotate(-90.000000) translate(-711.500000, -1038.500000) translate(706.000000, 1029.000000)">
+											<g id="Capa_1">
+													<path d="M1.31004932,9.49950228 L9.85654942,0.918792896 C10.0667418,0.707759208 10.0667418,0.369308954 9.85654942,0.158275266 C9.64635707,-0.052758422 9.30925614,-0.052758422 9.09906379,0.158275266 L0.171837935,9.12123435 C-0.0383544106,9.33226804 -0.0383544106,9.67071829 0.171837935,9.88175198 L9.09906379,18.8407293 C9.20217702,18.9442553 9.34098329,19 9.47582366,19 C9.61066403,19 9.7494703,18.948237 9.85258352,18.8407293 C10.0627759,18.6296956 10.0627759,18.2912454 9.85258352,18.0802117 L1.31004932,9.49950228 L1.31004932,9.49950228 Z" id="Shape"></path>
+											</g>
+									</g>
+							</g>
+					</g>
+			</svg>
+		</button>
+
 		<!-- Start section -->
-		<section>
+		<section class="start-section">
 			<ul id="start" class="start">
 
 				<li class="layer" data-depth="3.00">
@@ -128,22 +144,6 @@
 			  <source src="/music/aphextwin3.mp3" type="audio/mpeg">
 			</audio>
 
-			<button class="big-btn">
-				<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-				<svg width="19px" height="10px" viewBox="0 0 19 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-						<defs></defs>
-						<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-								<g id="start-1" transform="translate(-702.000000, -1034.000000)" fill="#FFFFFF">
-										<g id="back" transform="translate(711.500000, 1038.500000) rotate(-90.000000) translate(-711.500000, -1038.500000) translate(706.000000, 1029.000000)">
-												<g id="Capa_1">
-														<path d="M1.31004932,9.49950228 L9.85654942,0.918792896 C10.0667418,0.707759208 10.0667418,0.369308954 9.85654942,0.158275266 C9.64635707,-0.052758422 9.30925614,-0.052758422 9.09906379,0.158275266 L0.171837935,9.12123435 C-0.0383544106,9.33226804 -0.0383544106,9.67071829 0.171837935,9.88175198 L9.09906379,18.8407293 C9.20217702,18.9442553 9.34098329,19 9.47582366,19 C9.61066403,19 9.7494703,18.948237 9.85258352,18.8407293 C10.0627759,18.6296956 10.0627759,18.2912454 9.85258352,18.0802117 L1.31004932,9.49950228 L1.31004932,9.49950228 Z" id="Shape"></path>
-												</g>
-										</g>
-								</g>
-						</g>
-				</svg>
-			</button>
-
 			<button class="mute-btn">
 				<svg width="30px" height="24px" viewBox="0 0 30 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 				    <defs></defs>
@@ -168,9 +168,14 @@
 		<!-- Cases section -->
 		<section class="cases">
 			<article class="case">
+				<div id="three-container"></div>
 			</article>
 		</section>
 
-		<button class="scroll scroll--down"></button>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script src="assets/modernizr/modernizr.js"></script>
+		<script src='http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script>
+		<script src="/assets/parallax/jquery.parallax.min.js"></script>
+		<script src="dist/js/bundle.js"></script>
 	</body>
 	</html>
