Case start polish also added reveal JS

--- a/index.html
+++ b/index.html
@@ -84,108 +84,233 @@
 			</svg>
 		</button>
 
-		<!-- Start section -->
-		<section class="start-section">
-			<ul id="start" class="start">
+		<div class="reveal">
+			<div class="slides">
+				<!-- Start section -->
+				<section class="start-section">
+					<ul id="start" class="start">
 
-				<li class="layer" data-depth="3.00">
-					<iframe class="start__bg" src="https://player.vimeo.com/video/189716952?autoplay=1&loop=1&color=ffffff&title=0&byline=0&portrait=0" width="1920" height="1080" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-				</li>
+						<li class="layer" data-depth="3.00">
+							<iframe class="start__bg" data-src="https://player.vimeo.com/video/189716952?autoplay=1&loop=1&color=ffffff&title=0&byline=0&portrait=0" width="1920" height="1080" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+						</li>
 
-				<li class="layer" data-depth="-0.20">
-					<div class="start__text">
-						<h1>
-							<div class="start__text__cut">
-								<span class="last-text">Anton Ranestam</span>
+						<li class="layer" data-depth="-0.20">
+							<div class="start__text">
+								<h1>
+									<div class="start__text__cut">
+										<span class="last-text">Anton Ranestam</span>
 
-								<ul>
-									<li class="start__text__1"><span>A</span><span>n</span><span>t</span><span>o</span><span>n</span></li>
-									<li class="start__text__2"><span>R</span><span>a</span><span>n</span><span>e</span><span>s</span><span>t</span><span>a</span><span>m</span></li>
-									<li class="start__text__3"><span>I</span><span>N</span><span>F</span><span>P</span><span>-</span><span>T</span> </li>
-									<li class="start__text__4"><span>D</span><span>e</span><span>s</span><span>i</span><span>g</span><span>n</span><span>e</span><span>r</span></li>
-									<li class="start__text__5"><span>C</span><span>r</span><span>e</span><span>a</span><span>t</span><span>i</span><span>v</span><span>e</span> </li>
-									<li class="start__text__6"><span>C</span><span>o</span><span>d</span><span>e</span><span>r</span></li>
-									<li class="start__text__7"> <span>M</span><span>a</span><span>k</span><span>e</span><span>r</span></li>
-									<li class="start__text__8"><span>D</span><span>e</span><span>s</span><span>i</span><span>g</span><span>n</span><span>e</span><span>r</span> </li>
-								</ul>
+										<ul>
+											<li class="start__text__1"><span>A</span><span>n</span><span>t</span><span>o</span><span>n</span></li>
+											<li class="start__text__2"><span>R</span><span>a</span><span>n</span><span>e</span><span>s</span><span>t</span><span>a</span><span>m</span></li>
+											<li class="start__text__3"><span>I</span><span>N</span><span>F</span><span>P</span><span>-</span><span>T</span> </li>
+											<li class="start__text__4"><span>D</span><span>e</span><span>s</span><span>i</span><span>g</span><span>n</span><span>e</span><span>r</span></li>
+											<li class="start__text__5"><span>C</span><span>r</span><span>e</span><span>a</span><span>t</span><span>i</span><span>v</span><span>e</span> </li>
+											<li class="start__text__6"><span>C</span><span>o</span><span>d</span><span>e</span><span>r</span></li>
+											<li class="start__text__7"> <span>M</span><span>a</span><span>k</span><span>e</span><span>r</span></li>
+											<li class="start__text__8"><span>D</span><span>e</span><span>s</span><span>i</span><span>g</span><span>n</span><span>e</span><span>r</span> </li>
+										</ul>
+									</div>
+								</h1>
+
+								<span class="visualizer">
+									<span class="visualizer__wrapper">
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+										<span></span>
+									</span>
+								</span>
 							</div>
-						</h1>
+						</li>
+					</ul>
 
-						<span class="visualizer">
-							<span class="visualizer__wrapper">
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-							</span>
-						</span>
+					<audio id="song" autoplay loop>
+						<source data-src="/music/aphextwin3.mp3" type="audio/mpeg">
+					</audio>
+
+					<button class="mute-btn">
+						<svg width="30px" height="24px" viewBox="0 0 30 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+								<defs></defs>
+								<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+										<g id="start-1" transform="translate(-47.000000, -1014.000000)" fill="#FFFFFF">
+												<g id="speaker" transform="translate(47.000000, 1014.000000)">
+														<g id="Capa_1">
+																<g id="Group">
+																		<path d="M14.202,0.879 C13.7145,0.603 13.1365,0.612 12.657,0.901 C12.634,0.9145 12.612,0.9305 12.592,0.9475 L5.817,6.679 L0.5,6.679 C0.2235,6.679 0,6.9025 0,7.179 L0,16.679 C0,16.812 0.0525,16.939 0.1465,17.0325 C0.2405,17.126 0.367,17.179 0.5,17.179 L5.805,17.1765 L12.5765,23.3965 C12.6015,23.4195 12.6285,23.4395 12.657,23.4565 C12.903,23.605 13.1755,23.6795 13.448,23.6795 C13.7065,23.679 13.9645,23.6125 14.202,23.4785 C14.7015,23.1965 15,22.6815 15,22.1005 L15,2.257 C15,1.6765 14.7015,1.1615 14.202,0.879 L14.202,0.879 Z M14,22.1005 C14,22.316 13.8915,22.5055 13.7105,22.608 C13.633,22.6515 13.4365,22.7355 13.2105,22.621 L6.5,16.4565 L6.5,14.1785 C6.5,13.902 6.2765,13.6785 6,13.6785 C5.7235,13.6785 5.5,13.902 5.5,14.1785 L5.5,16.1765 L1,16.1785 L1,7.6785 L5.5,7.6785 L5.5,9.6785 C5.5,9.955 5.7235,10.1785 6,10.1785 C6.2765,10.1785 6.5,9.955 6.5,9.6785 L6.5,7.4105 L13.2025,1.7405 C13.433,1.6195 13.633,1.7055 13.7105,1.7495 C13.8915,1.852 14,2.0415 14,2.257 L14,22.1005 L14,22.1005 Z" id="Shape"></path>
+																		<path class="stroke" d="M26.013,11.929 C26.013,7.7555 23.355,4.049 19.3985,2.7055 C19.1375,2.617 18.853,2.757 18.764,3.0185 C18.6755,3.2795 18.8155,3.564 19.077,3.653 C22.6275,4.8585 25.013,8.1845 25.013,11.9295 C25.013,15.671 22.632,18.9975 19.0885,20.2065 C18.8275,20.2955 18.6875,20.5795 18.777,20.8415 C18.848,21.049 19.042,21.18 19.25,21.18 C19.3035,21.18 19.358,21.1715 19.4115,21.153 C23.3605,19.8055 26.013,16.099 26.013,11.929 L26.013,11.929 Z" id="Shape"></path>
+																		<path class="stroke" d="M22.2265,0.187 C21.9725,0.0805 21.679,0.1975 21.5705,0.452 C21.463,0.7065 21.5815,1 21.836,1.108 C26.188,2.9545 29,7.2025 29,11.929 C29,16.8175 26.053,21.119 21.4925,22.886 C21.235,22.986 21.107,23.2755 21.207,23.533 C21.2835,23.731 21.473,23.8525 21.6735,23.8525 C21.7335,23.8525 21.7945,23.842 21.854,23.819 C26.8025,21.9005 30,17.2335 30,11.929 C30,6.8 26.9485,2.191 22.2265,0.187 L22.2265,0.187 Z" id="Shape"></path>
+																		<path class="stroke" d="M21.513,11.929 C21.513,8.943 19.5085,6.278 16.6385,5.448 C16.3735,5.3725 16.0965,5.524 16.0195,5.79 C15.943,6.055 16.0955,6.3325 16.3615,6.409 C18.806,7.1155 20.5135,9.3855 20.5135,11.929 C20.5135,14.4725 18.806,16.7425 16.3615,17.449 C16.096,17.5255 15.943,17.803 16.0195,18.068 C16.083,18.287 16.2825,18.4295 16.5,18.4295 C16.546,18.4295 16.5925,18.423 16.6385,18.41 C19.509,17.5795 21.513,14.9145 21.513,11.929 L21.513,11.929 Z" id="Shape"></path>
+																</g>
+														</g>
+												</g>
+										</g>
+								</g>
+						</svg>
+					</button>
+				</section>
+
+				<!-- Cases section -->
+				<section class="cases" id="cases">
+
+					<nav class="cases__menu">
+						<button class="btn-up"></button>
+						<button data-case="booking" class="btn-round active"></button>
+						<button data-case="og" class="btn-round"></button>
+						<button data-case="ess" class="btn-round"></button>
+						<button class="btn-down"></button>
+					</nav>
+
+					<div class="cases__wrapper">
+
+						<ul class="cases__wrapper__article">
+
+							<li class="layer" data-depth="-1.00">
+								<h3 class="cases__wrapper__article__top-left">booking system  <br /> for Malmös <br /> cultural life.</h3>
+								<h3 class="cases__wrapper__article__bottom-right">booking system  <br /> for Malmös <br /> cultural life.</h3>
+							</li>
+
+							<li class="layer layer-index" data-depth="0.50">
+								<a class="read-btn" href="#og">Read more</a>
+							</li>
+
+							<li class="layer" data-depth="2.00">
+								<div class="letter-wrapper">
+									<span class="letter-wrapper__blob" id="letter-wrapper__blob"></span>
+									<svg class="letter-wrapper__effect" xmlns="http://www.w3.org/2000/svg" version="1.1">
+									  <defs>
+									    <filter id="fancy-goo">
+									      <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
+									      <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 19 -9" result="goo" />
+									      <feComposite in="SourceGraphic" in2="goo" operator="atop"/>
+									    </filter>
+									  </defs>
+									</svg>
+									<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+										 viewBox="0 0 376.4 369" style="enable-background:new 0 0 376.4 369;" xml:space="preserve">
+										<style type="text/css">
+											.st0{fill:url(#path-2_4_);}
+											.st1{fill:url(#path-2_5_);}
+											.st2{fill:url(#path-2_6_);}
+										</style>
+										<g id="end">
+											<g id="start-2_1_" transform="translate(-639.000000, -1725.000000)">
+												<g id="case-intro_1_" transform="translate(192.000000, 1570.000000)">
+													<g id="letter_1_" transform="translate(447.000000, 155.000000)">
+														<g id="Screen-Shot-2016-10-25-at-11.48.51_1_">
+															<g id="E">
+
+																	<linearGradient id="path-2_4_" gradientUnits="userSpaceOnUse" x1="-119.8156" y1="584.7982" x2="-120.7256" y2="586.6216" gradientTransform="matrix(244.51 0 0 -346.92 29621.0156 203437.125)">
+																	<stop  offset="0" style="stop-color:#F64848"/>
+																	<stop  offset="1" style="stop-color:#F095FF"/>
+																</linearGradient>
+																<polygon id="path-2_3_" class="st0" points="74.8,9.5 310.5,9.5 310.5,80.1 151.3,80.1 151.3,144.8 301.7,144.8 301.7,215.3
+																	151.3,215.3 151.3,285.9 319.3,285.9 319.3,356.5 74.8,356.5 						"/>
+															</g>
+														</g>
+													</g>
+												</g>
+											</g>
+										</g>
+										<g id="middle">
+											<g id="start-2" transform="translate(-561.000000, -993.000000)">
+												<g id="case-intro" transform="translate(190.000000, 848.000000)">
+													<g id="letter" transform="translate(371.000000, 145.000000)">
+														<g id="Screen-Shot-2016-10-25-at-11.48.51">
+															<g id="OG">
+
+																	<linearGradient id="path-2_5_" gradientUnits="userSpaceOnUse" x1="-120.2555" y1="584.8385" x2="-121.1656" y2="586.662" gradientTransform="matrix(366.72 0 0 -357.12 44486.5 209424.9688)">
+																	<stop  offset="0" style="stop-color:#F64848"/>
+																	<stop  offset="1" style="stop-color:#F095FF"/>
+																</linearGradient>
+																<path id="path-2_2_" class="st1" d="M6,183c0-27.2,4.6-51.8,13.7-73.9s21.8-40.9,38.2-56.4s35.7-27.4,58.1-35.8
+																	s46.9-12.5,73.4-12.5s51,4.2,73.4,12.5s41.8,20.2,58.1,35.8c16.3,15.5,29,34.3,38.2,56.4c9.1,22.1,13.7,46.7,13.7,73.9
+																	s-4.6,51.8-13.7,73.9c-9.1,22.1-21.8,40.9-38.2,56.4c-16.3,15.5-35.7,27.4-58.1,35.8s-46.9,12.5-73.4,12.5s-51-4.2-73.4-12.5
+																	s-41.8-20.2-58.1-35.8s-29-34.3-38.2-56.4S6,210.2,6,183L6,183z M83.8,183c0,16,2.5,30.6,7.4,43.9c5,13.3,12.1,24.8,21.4,34.6
+																	c9.3,9.8,20.4,17.4,33.4,22.8c13,5.4,27.4,8.2,43.4,8.2s30.5-2.7,43.4-8.2c13-5.4,24.1-13,33.4-22.8
+																	c9.3-9.8,16.4-21.3,21.4-34.6S295,199,295,183c0-15.7-2.5-30.2-7.4-43.7s-12.1-25-21.4-34.8c-9.3-9.8-20.4-17.4-33.4-22.8
+																	c-13-5.4-27.4-8.2-43.4-8.2s-30.5,2.7-43.4,8.2c-13,5.4-24.1,13-33.4,22.8s-16.4,21.4-21.4,34.8
+																	C86.2,152.8,83.8,167.3,83.8,183L83.8,183z"/>
+															</g>
+														</g>
+													</g>
+												</g>
+											</g>
+										</g>
+
+										<g id="start">
+											<defs>
+												<pattern patternUnits="userSpaceOnUse" id="image" x="0%" y="0%" height="100%" width="100%"
+																 viewBox="0 0 512 512">
+													<image x="-90%" y="-1%" width="830" height="500" xlink:href="/orkester.jpg"></image>
+												</pattern>
+											</defs>
+											<g id="Mask">
+												<path fill="url(#image)" id="path-2_1_" d="M50.4,6h132c15.3,0,30.7,1.1,46.2,3.2s29.4,6.5,41.8,13c12.3,6.5,22.3,15.6,30,27.2
+													s11.5,27.2,11.5,46.5c0,20-5.6,36.6-16.8,49.8s-25.9,22.6-44.3,28.2v1c11.7,1.7,22.2,4.9,31.8,9.8c9.5,4.8,17.7,11,24.5,18.5
+													s12.1,16.2,15.8,26.2s5.5,20.7,5.5,32c0,18.7-4,34.2-12,46.8s-18.3,22.6-31,30.2c-12.7,7.7-26.9,13.2-42.8,16.5s-31.6,5-47.2,5
+													h-145V6z M128.4,147.5h56.5c6,0,11.9-0.7,17.8-2s11.1-3.5,15.8-6.5s8.4-7,11.2-12c2.8-5,4.2-11,4.2-18c0-7.3-1.6-13.4-4.8-18.2
+													s-7.2-8.6-12.2-11.2s-10.7-4.6-17-5.8S187.4,72,181.4,72h-53V147.5z M128.4,294h70c6,0,12.1-0.7,18.2-2s11.7-3.7,16.8-7
+													s9.1-7.7,12.2-13s4.8-11.8,4.8-19.5c0-8.3-2.1-15.1-6.2-20.2s-9.4-9.1-15.8-11.8s-13.2-4.5-20.5-5.5s-14.2-1.5-20.5-1.5h-59V294z"
+													/>
+											</g>
+										</g>
+									</svg>
+								</div> <!-- end letter wrapper -->
+							</li>
+
+							<li class="layer" data-depth="-0.3"><h2 class="cases__client">Malmö opera group</h2></li>
+						</ul>
 					</div>
-				</li>
-			</ul>
-
-			<audio id="song" autoplay loop>
-			  <source src="/music/aphextwin3.mp3" type="audio/mpeg">
-			</audio>
-
-			<button class="mute-btn">
-				<svg width="30px" height="24px" viewBox="0 0 30 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-				    <defs></defs>
-				    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-				        <g id="start-1" transform="translate(-47.000000, -1014.000000)" fill="#FFFFFF">
-				            <g id="speaker" transform="translate(47.000000, 1014.000000)">
-				                <g id="Capa_1">
-				                    <g id="Group">
-				                        <path d="M14.202,0.879 C13.7145,0.603 13.1365,0.612 12.657,0.901 C12.634,0.9145 12.612,0.9305 12.592,0.9475 L5.817,6.679 L0.5,6.679 C0.2235,6.679 0,6.9025 0,7.179 L0,16.679 C0,16.812 0.0525,16.939 0.1465,17.0325 C0.2405,17.126 0.367,17.179 0.5,17.179 L5.805,17.1765 L12.5765,23.3965 C12.6015,23.4195 12.6285,23.4395 12.657,23.4565 C12.903,23.605 13.1755,23.6795 13.448,23.6795 C13.7065,23.679 13.9645,23.6125 14.202,23.4785 C14.7015,23.1965 15,22.6815 15,22.1005 L15,2.257 C15,1.6765 14.7015,1.1615 14.202,0.879 L14.202,0.879 Z M14,22.1005 C14,22.316 13.8915,22.5055 13.7105,22.608 C13.633,22.6515 13.4365,22.7355 13.2105,22.621 L6.5,16.4565 L6.5,14.1785 C6.5,13.902 6.2765,13.6785 6,13.6785 C5.7235,13.6785 5.5,13.902 5.5,14.1785 L5.5,16.1765 L1,16.1785 L1,7.6785 L5.5,7.6785 L5.5,9.6785 C5.5,9.955 5.7235,10.1785 6,10.1785 C6.2765,10.1785 6.5,9.955 6.5,9.6785 L6.5,7.4105 L13.2025,1.7405 C13.433,1.6195 13.633,1.7055 13.7105,1.7495 C13.8915,1.852 14,2.0415 14,2.257 L14,22.1005 L14,22.1005 Z" id="Shape"></path>
-				                        <path class="stroke" d="M26.013,11.929 C26.013,7.7555 23.355,4.049 19.3985,2.7055 C19.1375,2.617 18.853,2.757 18.764,3.0185 C18.6755,3.2795 18.8155,3.564 19.077,3.653 C22.6275,4.8585 25.013,8.1845 25.013,11.9295 C25.013,15.671 22.632,18.9975 19.0885,20.2065 C18.8275,20.2955 18.6875,20.5795 18.777,20.8415 C18.848,21.049 19.042,21.18 19.25,21.18 C19.3035,21.18 19.358,21.1715 19.4115,21.153 C23.3605,19.8055 26.013,16.099 26.013,11.929 L26.013,11.929 Z" id="Shape"></path>
-				                        <path class="stroke" d="M22.2265,0.187 C21.9725,0.0805 21.679,0.1975 21.5705,0.452 C21.463,0.7065 21.5815,1 21.836,1.108 C26.188,2.9545 29,7.2025 29,11.929 C29,16.8175 26.053,21.119 21.4925,22.886 C21.235,22.986 21.107,23.2755 21.207,23.533 C21.2835,23.731 21.473,23.8525 21.6735,23.8525 C21.7335,23.8525 21.7945,23.842 21.854,23.819 C26.8025,21.9005 30,17.2335 30,11.929 C30,6.8 26.9485,2.191 22.2265,0.187 L22.2265,0.187 Z" id="Shape"></path>
-				                        <path class="stroke" d="M21.513,11.929 C21.513,8.943 19.5085,6.278 16.6385,5.448 C16.3735,5.3725 16.0965,5.524 16.0195,5.79 C15.943,6.055 16.0955,6.3325 16.3615,6.409 C18.806,7.1155 20.5135,9.3855 20.5135,11.929 C20.5135,14.4725 18.806,16.7425 16.3615,17.449 C16.096,17.5255 15.943,17.803 16.0195,18.068 C16.083,18.287 16.2825,18.4295 16.5,18.4295 C16.546,18.4295 16.5925,18.423 16.6385,18.41 C19.509,17.5795 21.513,14.9145 21.513,11.929 L21.513,11.929 Z" id="Shape"></path>
-				                    </g>
-				                </g>
-				            </g>
-				        </g>
-				    </g>
-				</svg>
-			</button>
-		</section>
-
-		<!-- Cases section -->
-		<section class="cases">
-			<article class="case">
-				<div id="three-container"></div>
-			</article>
-		</section>
+				</section>
+			</div>
+		</div>
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script src="assets/modernizr/modernizr.js"></script>
 		<script src='http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script>
 		<script src="/assets/parallax/jquery.parallax.min.js"></script>
+		<script src="assets/reveal/reveal.js"></script>
 		<script src="dist/js/bundle.js"></script>
+
+		<script>
+			// More info https://github.com/hakimel/reveal.js#configuration
+			Reveal.initialize({
+				history: true,
+				slideNumber: false,
+				controls: false,
+				keyboard: false,
+				touch: false,
+				width: "100vh",
+				height: "100vh"
+			});
+		</script>
 	</body>
 	</html>
