--- a/index.html
+++ b/index.html
@@ -215,12 +215,60 @@
 									</svg>
 									<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 										 viewBox="0 0 376.4 369" style="enable-background:new 0 0 376.4 369;" xml:space="preserve">
-										<style type="text/css">
-											.st0{fill:url(#path-2_4_);}
-											.st1{fill:url(#path-2_5_);}
-											.st2{fill:url(#path-2_6_);}
-										</style>
-										<g id="end">
+
+									 <g class="active" id="booking">
+										 <defs>
+											 <pattern patternUnits="userSpaceOnUse" id="image" x="0%" y="0%" height="100%" width="100%"
+																viewBox="0 0 512 512">
+												 <image x="-90%" y="-1%" width="830" height="500" xlink:href="/orkester.jpg"></image>
+											 </pattern>
+										 </defs>
+										 <g id="Mask">
+											 <path fill="url(#image)" id="path-2_1_" d="M50.4,6h132c15.3,0,30.7,1.1,46.2,3.2s29.4,6.5,41.8,13c12.3,6.5,22.3,15.6,30,27.2
+												 s11.5,27.2,11.5,46.5c0,20-5.6,36.6-16.8,49.8s-25.9,22.6-44.3,28.2v1c11.7,1.7,22.2,4.9,31.8,9.8c9.5,4.8,17.7,11,24.5,18.5
+												 s12.1,16.2,15.8,26.2s5.5,20.7,5.5,32c0,18.7-4,34.2-12,46.8s-18.3,22.6-31,30.2c-12.7,7.7-26.9,13.2-42.8,16.5s-31.6,5-47.2,5
+												 h-145V6z M128.4,147.5h56.5c6,0,11.9-0.7,17.8-2s11.1-3.5,15.8-6.5s8.4-7,11.2-12c2.8-5,4.2-11,4.2-18c0-7.3-1.6-13.4-4.8-18.2
+												 s-7.2-8.6-12.2-11.2s-10.7-4.6-17-5.8S187.4,72,181.4,72h-53V147.5z M128.4,294h70c6,0,12.1-0.7,18.2-2s11.7-3.7,16.8-7
+												 s9.1-7.7,12.2-13s4.8-11.8,4.8-19.5c0-8.3-2.1-15.1-6.2-20.2s-9.4-9.1-15.8-11.8s-13.2-4.5-20.5-5.5s-14.2-1.5-20.5-1.5h-59V294z"
+												 />
+										 </g>
+									 </g>
+
+										<g id="og">
+
+											<defs>
+												<pattern patternUnits="userSpaceOnUse" id="image2" x="0%" y="0%" height="100%" width="100%"
+																 viewBox="0 0 512 512">
+													<image x="-20%" y="0" width="830" height="500" xlink:href="/og.jpg"></image>
+												</pattern>
+											</defs>
+
+											 <g id="start-2" transform="translate(-561.000000, -993.000000)">
+												 <g id="case-intro" transform="translate(190.000000, 848.000000)">
+													 <g id="letter" transform="translate(371.000000, 145.000000)">
+														 <g id="Screen-Shot-2016-10-25-at-11.48.51">
+															 <g id="OG">
+
+																	 <linearGradient id="path-2_5_" gradientUnits="userSpaceOnUse" x1="-120.2555" y1="584.8385" x2="-121.1656" y2="586.662" gradientTransform="matrix(366.72 0 0 -357.12 44486.5 209424.9688)">
+																	 <stop  offset="0" style="stop-color:#F64848"/>
+																	 <stop  offset="1" style="stop-color:#F095FF"/>
+																 </linearGradient>
+																 <path id="path-2_2_" fill="url(#image2)" d="M6,183c0-27.2,4.6-51.8,13.7-73.9s21.8-40.9,38.2-56.4s35.7-27.4,58.1-35.8
+																	 s46.9-12.5,73.4-12.5s51,4.2,73.4,12.5s41.8,20.2,58.1,35.8c16.3,15.5,29,34.3,38.2,56.4c9.1,22.1,13.7,46.7,13.7,73.9
+																	 s-4.6,51.8-13.7,73.9c-9.1,22.1-21.8,40.9-38.2,56.4c-16.3,15.5-35.7,27.4-58.1,35.8s-46.9,12.5-73.4,12.5s-51-4.2-73.4-12.5
+																	 s-41.8-20.2-58.1-35.8s-29-34.3-38.2-56.4S6,210.2,6,183L6,183z M83.8,183c0,16,2.5,30.6,7.4,43.9c5,13.3,12.1,24.8,21.4,34.6
+																	 c9.3,9.8,20.4,17.4,33.4,22.8c13,5.4,27.4,8.2,43.4,8.2s30.5-2.7,43.4-8.2c13-5.4,24.1-13,33.4-22.8
+																	 c9.3-9.8,16.4-21.3,21.4-34.6S295,199,295,183c0-15.7-2.5-30.2-7.4-43.7s-12.1-25-21.4-34.8c-9.3-9.8-20.4-17.4-33.4-22.8
+																	 c-13-5.4-27.4-8.2-43.4-8.2s-30.5,2.7-43.4,8.2c-13,5.4-24.1,13-33.4,22.8s-16.4,21.4-21.4,34.8
+																	 C86.2,152.8,83.8,167.3,83.8,183L83.8,183z"/>
+															 </g>
+														 </g>
+													 </g>
+												 </g>
+											 </g>
+										</g>
+
+										<g id="ess">
 											<g id="start-2_1_" transform="translate(-639.000000, -1725.000000)">
 												<g id="case-intro_1_" transform="translate(192.000000, 1570.000000)">
 													<g id="letter_1_" transform="translate(447.000000, 155.000000)">
@@ -237,49 +285,6 @@
 														</g>
 													</g>
 												</g>
-											</g>
-										</g>
-										<g id="middle">
-											<g id="start-2" transform="translate(-561.000000, -993.000000)">
-												<g id="case-intro" transform="translate(190.000000, 848.000000)">
-													<g id="letter" transform="translate(371.000000, 145.000000)">
-														<g id="Screen-Shot-2016-10-25-at-11.48.51">
-															<g id="OG">
-
-																	<linearGradient id="path-2_5_" gradientUnits="userSpaceOnUse" x1="-120.2555" y1="584.8385" x2="-121.1656" y2="586.662" gradientTransform="matrix(366.72 0 0 -357.12 44486.5 209424.9688)">
-																	<stop  offset="0" style="stop-color:#F64848"/>
-																	<stop  offset="1" style="stop-color:#F095FF"/>
-																</linearGradient>
-																<path id="path-2_2_" class="st1" d="M6,183c0-27.2,4.6-51.8,13.7-73.9s21.8-40.9,38.2-56.4s35.7-27.4,58.1-35.8
-																	s46.9-12.5,73.4-12.5s51,4.2,73.4,12.5s41.8,20.2,58.1,35.8c16.3,15.5,29,34.3,38.2,56.4c9.1,22.1,13.7,46.7,13.7,73.9
-																	s-4.6,51.8-13.7,73.9c-9.1,22.1-21.8,40.9-38.2,56.4c-16.3,15.5-35.7,27.4-58.1,35.8s-46.9,12.5-73.4,12.5s-51-4.2-73.4-12.5
-																	s-41.8-20.2-58.1-35.8s-29-34.3-38.2-56.4S6,210.2,6,183L6,183z M83.8,183c0,16,2.5,30.6,7.4,43.9c5,13.3,12.1,24.8,21.4,34.6
-																	c9.3,9.8,20.4,17.4,33.4,22.8c13,5.4,27.4,8.2,43.4,8.2s30.5-2.7,43.4-8.2c13-5.4,24.1-13,33.4-22.8
-																	c9.3-9.8,16.4-21.3,21.4-34.6S295,199,295,183c0-15.7-2.5-30.2-7.4-43.7s-12.1-25-21.4-34.8c-9.3-9.8-20.4-17.4-33.4-22.8
-																	c-13-5.4-27.4-8.2-43.4-8.2s-30.5,2.7-43.4,8.2c-13,5.4-24.1,13-33.4,22.8s-16.4,21.4-21.4,34.8
-																	C86.2,152.8,83.8,167.3,83.8,183L83.8,183z"/>
-															</g>
-														</g>
-													</g>
-												</g>
-											</g>
-										</g>
-
-										<g id="start">
-											<defs>
-												<pattern patternUnits="userSpaceOnUse" id="image" x="0%" y="0%" height="100%" width="100%"
-																 viewBox="0 0 512 512">
-													<image x="-90%" y="-1%" width="830" height="500" xlink:href="/orkester.jpg"></image>
-												</pattern>
-											</defs>
-											<g id="Mask">
-												<path fill="url(#image)" id="path-2_1_" d="M50.4,6h132c15.3,0,30.7,1.1,46.2,3.2s29.4,6.5,41.8,13c12.3,6.5,22.3,15.6,30,27.2
-													s11.5,27.2,11.5,46.5c0,20-5.6,36.6-16.8,49.8s-25.9,22.6-44.3,28.2v1c11.7,1.7,22.2,4.9,31.8,9.8c9.5,4.8,17.7,11,24.5,18.5
-													s12.1,16.2,15.8,26.2s5.5,20.7,5.5,32c0,18.7-4,34.2-12,46.8s-18.3,22.6-31,30.2c-12.7,7.7-26.9,13.2-42.8,16.5s-31.6,5-47.2,5
-													h-145V6z M128.4,147.5h56.5c6,0,11.9-0.7,17.8-2s11.1-3.5,15.8-6.5s8.4-7,11.2-12c2.8-5,4.2-11,4.2-18c0-7.3-1.6-13.4-4.8-18.2
-													s-7.2-8.6-12.2-11.2s-10.7-4.6-17-5.8S187.4,72,181.4,72h-53V147.5z M128.4,294h70c6,0,12.1-0.7,18.2-2s11.7-3.7,16.8-7
-													s9.1-7.7,12.2-13s4.8-11.8,4.8-19.5c0-8.3-2.1-15.1-6.2-20.2s-9.4-9.1-15.8-11.8s-13.2-4.5-20.5-5.5s-14.2-1.5-20.5-1.5h-59V294z"
-													/>
 											</g>
 										</g>
 									</svg>
