--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		<link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/44f6deba-4325-4daf-a313-cdabbeae99b8.css"/>
 
-	<body style="overflow: hidden;" class="color-change">
+	<body style="overflow: hidden;">
 
 		<header class="top-bar">
 			<div class="menu-wrapper">
@@ -68,7 +68,7 @@
 			</span>
 		</header>
 
-		<button class="big-btn">
+		<button class="big-btn big-btn--down">
 			<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 			<svg width="19px" height="10px" viewBox="0 0 19 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 					<defs></defs>
@@ -196,7 +196,7 @@
 							</li>
 
 							<li class="layer layer-index" data-depth="0.50">
-								<a class="read-btn" href="#booking-case">Read more</a>
+								<a class="read-btn" data-case="booking-case" href="#booking-case">Read more</a>
 							</li>
 
 							<li class="layer" data-depth="2.00">
@@ -298,10 +298,76 @@
 				</section>
 
 				<section class="case" id="booking-case">
-					<article>
-						<header class="case__header">
-							<h1>Booking System</h1>
-						</header>
+					<header class="case__header">
+
+						<div class="cases__wrapper">
+
+							<ul class="cases__wrapper__article">
+
+								<li class="layer" data-depth="-1.00">
+									<h3 class="cases__wrapper__article__text cases__wrapper__article__top-left">booking system  <br /> for Malmös <br /> cultural life.</h3>
+									<h3 class="cases__wrapper__article__text cases__wrapper__article__bottom-right">booking system  <br /> for Malmös <br /> cultural life.</h3>
+								</li>
+
+								<li class="layer layer-index" data-depth="0.50">
+									<h1 class="case__title">Booking System</h1>
+								</li>
+
+								<li class="layer" data-depth="2.00">
+									<div class="letter-wrapper">
+
+										<svg class="letter-wrapper__effect" xmlns="http://www.w3.org/2000/svg" version="1.1">
+											<defs>
+												<filter id="goo">
+													<feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
+													<feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 19 -9" result="goo" />
+													<feComposite in="SourceGraphic" in2="goo" operator="atop"/>
+												</filter>
+											</defs>
+										</svg>
+										<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+											 viewBox="0 0 376.4 369" style="enable-background:new 0 0 376.4 369;" xml:space="preserve">
+
+										 <g class="active" id="booking">
+											 <defs>
+												 <pattern patternUnits="userSpaceOnUse" id="image" x="0%" y="0%" height="100%" width="100%"
+																	viewBox="0 0 512 512">
+													 <image x="-90%" y="-1%" width="830" height="500" xlink:href="/orkester.jpg"></image>
+												 </pattern>
+											 </defs>
+											 <g id="Mask">
+												 <path fill="url(#image)" id="path-2_1_" d="M50.4,6h132c15.3,0,30.7,1.1,46.2,3.2s29.4,6.5,41.8,13c12.3,6.5,22.3,15.6,30,27.2
+													 s11.5,27.2,11.5,46.5c0,20-5.6,36.6-16.8,49.8s-25.9,22.6-44.3,28.2v1c11.7,1.7,22.2,4.9,31.8,9.8c9.5,4.8,17.7,11,24.5,18.5
+													 s12.1,16.2,15.8,26.2s5.5,20.7,5.5,32c0,18.7-4,34.2-12,46.8s-18.3,22.6-31,30.2c-12.7,7.7-26.9,13.2-42.8,16.5s-31.6,5-47.2,5
+													 h-145V6z M128.4,147.5h56.5c6,0,11.9-0.7,17.8-2s11.1-3.5,15.8-6.5s8.4-7,11.2-12c2.8-5,4.2-11,4.2-18c0-7.3-1.6-13.4-4.8-18.2
+													 s-7.2-8.6-12.2-11.2s-10.7-4.6-17-5.8S187.4,72,181.4,72h-53V147.5z M128.4,294h70c6,0,12.1-0.7,18.2-2s11.7-3.7,16.8-7
+													 s9.1-7.7,12.2-13s4.8-11.8,4.8-19.5c0-8.3-2.1-15.1-6.2-20.2s-9.4-9.1-15.8-11.8s-13.2-4.5-20.5-5.5s-14.2-1.5-20.5-1.5h-59V294z"
+													 />
+											 </g>
+										 </g>
+										</svg>
+									</div> <!-- end letter wrapper -->
+								</li>
+							</ul>
+
+							<span class="arrow-down">
+								<svg width="19px" height="10px" viewBox="0 0 19 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+										<defs></defs>
+										<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+												<g id="start-1" transform="translate(-702.000000, -1034.000000)" fill="#FFFFFF">
+														<g id="back" transform="translate(711.500000, 1038.500000) rotate(-90.000000) translate(-711.500000, -1038.500000) translate(706.000000, 1029.000000)">
+																<g id="Capa_1">
+																		<path d="M1.31004932,9.49950228 L9.85654942,0.918792896 C10.0667418,0.707759208 10.0667418,0.369308954 9.85654942,0.158275266 C9.64635707,-0.052758422 9.30925614,-0.052758422 9.09906379,0.158275266 L0.171837935,9.12123435 C-0.0383544106,9.33226804 -0.0383544106,9.67071829 0.171837935,9.88175198 L9.09906379,18.8407293 C9.20217702,18.9442553 9.34098329,19 9.47582366,19 C9.61066403,19 9.7494703,18.948237 9.85258352,18.8407293 C10.0627759,18.6296956 10.0627759,18.2912454 9.85258352,18.0802117 L1.31004932,9.49950228 L1.31004932,9.49950228 Z" id="Shape"></path>
+																</g>
+														</g>
+												</g>
+										</g>
+								</svg>
+							</span>
+						</div>
+					</header>
+
+					<article class="case__body">
 
 						<h2>Intro</h2>
 						<p>This booking sytem was built for Malmö stadsteater(MST), Skånes dansteater(STD), Malmö live(ML) & Malmö opera(MO).
@@ -353,15 +419,15 @@
 						<nav class="after-case__nav">
 							<h4>What's next?</h4>
 							<li class="after-case__nav__item">
-								<a href="#"></a>
+								<a class="active" href="#">Malmö Opera Group</a>
 							</li>
 
 							<li class="after-case__nav__item">
-								<a href="#"></a>
+								<a href="#">Olsson & Gerthel</a>
 							</li>
 
 							<li class="after-case__nav__item">
-								<a href="#"></a>
+								<a href="#">European Spallation Source</a>
 							</li>
 						</nav>
 					</footer>
@@ -384,7 +450,7 @@
 		<script>
 			// More info https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
-				history: true,
+				history: false,
 				slideNumber: false,
 				controls: false,
 				keyboard: false,
