Minor case fixes and animation polish

--- a/index.html
+++ b/index.html
@@ -395,13 +395,13 @@
 						<h2>My role</h2>
 						<p>I was in charge of the design, UX and frontend as far as HTML / CSS goes. This was a very challenging task with alot of user stories to take into account.</p>
 
-						<img data-src="/images/booking/pic1.png" alt="intro">
+						<img data-src="/images/booking/pic1.png" alt="role">
 
 						<h2>4 Websites - 1 module</h2>
 						<p>One of the key focuses was making a good e-commerce experience on mobile, since the old design wasn't designed for small screens this was a huge blocker regarding sales.
 							We put our focus not only on making it look good, but also making the performance good using the latest web techniques.</p>
 
-						<img data-src="/images/booking/pic1.png" alt="intro">
+						<img class="case__vis" data-src="/images/booking/vis.png" alt="visualize">
 
 						<h2>The solution</h2>
 						<p>I first tried to crack the conundrum on how to have the same design for four visually different sites and still assure the user that they're still on the same site.
@@ -411,7 +411,7 @@
 						The buy ticket shouldn't be dependent on a calendar/table view which lists all performances.</p>
 
 						<ul class="big-pic">
-							<li class="layer" data-depth="-10.00" >
+							<li class="layer" data-depth="-5.00" >
 								<img data-src="/images/booking/b_mock1.png" alt="intro">
 							</li>
 						</ul>
@@ -420,16 +420,17 @@
 						<p>The problem with internet booking is that the current trend is to give the user so much visual information that the user get's scared.
 						This was solved with the in house term: "One the thing at the time"</p>
 
-						<img data-src="/images/booking/bitmap.png" alt="intro">
-						<img data-src="/images/booking/bitmap2.png" alt="intro">
-						<img data-src="/images/booking/bitmap3.png" alt="intro">
-						<img data-src="/images/booking/bitmap4.png" alt="intro">
-						<img data-src="/images/booking/bitmap5.png" alt="intro">
-
+						<div>
+							<img class="case__flow" data-src="/images/booking/bitmap.png" alt="booking-one">
+							<img class="case__flow" data-src="/images/booking/bitmap2.png" alt="booking-two">
+							<img class="case__flow" data-src="/images/booking/bitmap3.png" alt="booking-three">
+							<img class="case__flow" data-src="/images/booking/bitmap4.png" alt="booking-four">
+							<img class="case__flow" data-src="/images/booking/bitmap5.png" alt="booking-five">
+						</div>
 						<h2>Semi responsive</h2>
 						<p>The term "mobile booking" would make anyone cringe, but to be able to have intial good responsive booking behaviour was one of the goals for this project.</p>
 
-						<img data-src="/images/booking/b_mock2.png" alt="intro">
+						<img data-src="/images/booking/b_mock2.png" alt="responsive">
 					</article>
 
 					<footer class="after-case">
